moved scripts and css to root

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Champion's Rest - Tom Allen</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="contents"></div>
-<script type="text/javascript" src="/scripts/bundle.js"></script>
+<script type="text/javascript" src="/bundle.js"></script>
 </body>
 </html>
