fixing encoding issue causing apostrophes to not show correctly in page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 <div class="contents"></div>
-<script type="text/javascript" src="/bundle.js"></script>
+<script type="text/javascript" charset="UTF-8" src="/bundle.js"></script>
 </body>
 </html>
